dump/src/reader/v2/snapshots/dump__reader__v3__test__read_dump_v3-2.snap
---
source: dump/src/reader/v3/mod.rs
expression: tasks
---
[
  {
    "uuid": "01d7dd17-8241-4f1f-a7d1-2d1cb255f5b0",
    "update": {
      "status": "enqueued",
      "updateId": 0,
      "meta": {
        "DocumentAddition": {
          "primary_key": null,
          "method": "ReplaceDocuments",
          "content_uuid": "66d3f12d-fcf3-4b53-88cb-407017373de7"
        }
      },
      "enqueuedAt": "2022-10-07T11:39:03.703667164Z"
    }
  },
  {
    "uuid": "78be64a3-cae1-449e-b7ed-13e77c9a8a0c",
    "update": {
      "status": "processed",
      "success": {
        "DocumentsAddition": {
          "nb_documents": 10
        }
      },
      "processedAt": "2022-10-07T11:38:54.026649575Z",
      "updateId": 0,
      "meta": {
        "DocumentAddition": {
          "primary_key": null,
          "method": "ReplaceDocuments",
          "content_uuid": "378e1055-84e1-40e6-9328-176b1781850e"
        }
      },
      "enqueuedAt": "2022-10-07T11:38:54.004402239Z",
      "startedProcessingAt": "2022-10-07T11:38:54.011081233Z"
    }
  },
  {
    "uuid": "78be64a3-cae1-449e-b7ed-13e77c9a8a0c",
    "update": {
      "status": "processed",
      "success": "Other",
      "processedAt": "2022-10-07T11:38:54.245649334Z",
      "updateId": 1,
      "meta": {
        "Settings": {
          "filterableAttributes": [
            "genres",
            "id"
          ],
          "sortableAttributes": [
            "release_date"
          ]
        }
      },
      "enqueuedAt": "2022-10-07T11:38:54.217852146Z",
      "startedProcessingAt": "2022-10-07T11:38:54.23264073Z"
    }
  },
  {
    "uuid": "78be64a3-cae1-449e-b7ed-13e77c9a8a0c",
    "update": {
      "status": "processed",
      "success": "Other",
      "processedAt": "2022-10-07T11:38:54.456346121Z",
      "updateId": 2,
      "meta": {
        "Settings": {
          "rankingRules": [
            "words",
            "typo",
            "proximity",
            "attribute",
            "sort",
            "exactness",
            "release_date:asc"
          ]
        }
      },
      "enqueuedAt": "2022-10-07T11:38:54.438833927Z",
      "startedProcessingAt": "2022-10-07T11:38:54.453596791Z"
    }
  },
  {
    "uuid": "78be64a3-cae1-449e-b7ed-13e77c9a8a0c",
    "update": {
      "status": "processed",
      "success": {
        "DocumentsAddition": {
          "nb_documents": 100
        }
      },
      "processedAt": "2022-10-07T11:39:04.188852537Z",
      "updateId": 3,
      "meta": {
        "DocumentAddition": {
          "primary_key": null,
          "method": "ReplaceDocuments",
          "content_uuid": "48997745-7615-4349-9a50-4324cc3745c0"
        }
      },
      "enqueuedAt": "2022-10-07T11:39:03.695252071Z",
      "startedProcessingAt": "2022-10-07T11:39:03.698139272Z"
    }
  },
  {
    "uuid": "ba553439-18fe-4733-ba53-44eed898280c",
    "update": {
      "status": "processed",
      "success": "Other",
      "processedAt": "2022-10-07T11:38:54.74389899Z",
      "updateId": 0,
      "meta": {
        "Settings": {
          "synonyms": {
            "android": [
              "phone",
              "smartphone"
            ],
            "iphone": [
              "phone",
              "smartphone"
            ],
            "phone": [
              "smartphone",
              "iphone",
              "android"
            ]
          }
        }
      },
      "enqueuedAt": "2022-10-07T11:38:54.734594617Z",
      "startedProcessingAt": "2022-10-07T11:38:54.737274016Z"
    }
  },
  {
    "uuid": "ba553439-18fe-4733-ba53-44eed898280c",
    "update": {
      "status": "failed",
      "updateId": 1,
      "meta": {
        "DocumentAddition": {
          "primary_key": null,
          "method": "ReplaceDocuments",
          "content_uuid": "94b720e4-d6ad-49e1-ba02-34773eecab2a"
        }
      },
      "enqueuedAt": "2022-10-07T11:38:55.350510177Z",
      "startedProcessingAt": "2022-10-07T11:38:55.353402439Z",
      "msg": "The primary key inference process failed because the engine did not find any fields containing `id` substring in their name. If your document identifier does not contain any `id` substring, you can set the primary key of the index.",
      "code": "MissingPrimaryKey",
      "failedAt": "2022-10-07T11:38:55.35349514Z"
    }
  },
  {
    "uuid": "ba553439-18fe-4733-ba53-44eed898280c",
    "update": {
      "status": "processed",
      "success": {
        "DocumentsAddition": {
          "nb_documents": 10
        }
      },
      "processedAt": "2022-10-07T11:38:55.963185778Z",
      "updateId": 2,
      "meta": {
        "DocumentAddition": {
          "primary_key": "sku",
          "method": "ReplaceDocuments",
          "content_uuid": "0b65a2d5-04e2-4529-b123-df01831ca2c0"
        }
      },
      "enqueuedAt": "2022-10-07T11:38:55.940610428Z",
      "startedProcessingAt": "2022-10-07T11:38:55.951485379Z"
    }
  },
  {
    "uuid": "c408bc22-5859-49d1-8e9f-c88e2fa95cb0",
    "update": {
      "status": "failed",
      "updateId": 0,
      "meta": {
        "DocumentAddition": {
          "primary_key": null,
          "method": "ReplaceDocuments",
          "content_uuid": "d95dc3d2-30be-40d1-b3b3-057083499f71"
        }
      },
      "enqueuedAt": "2022-10-07T11:38:56.263041061Z",
      "startedProcessingAt": "2022-10-07T11:38:56.265837882Z",
      "msg": "The primary key inference process failed because the engine did not find any fields containing `id` substring in their name. If your document identifier does not contain any `id` substring, you can set the primary key of the index.",
      "code": "MissingPrimaryKey",
      "failedAt": "2022-10-07T11:38:56.265951133Z"
    }
  },
  {
    "uuid": "c408bc22-5859-49d1-8e9f-c88e2fa95cb0",
    "update": {
      "status": "processed",
      "success": {
        "DocumentsAddition": {
          "nb_documents": 10
        }
      },
      "processedAt": "2022-10-07T11:38:56.521004328Z",
      "updateId": 1,
      "meta": {
        "DocumentAddition": {
          "primary_key": "index",
          "method": "ReplaceDocuments",
          "content_uuid": "39aa01c5-c4e1-42af-8063-b6f6afbf5b98"
        }
      },
      "enqueuedAt": "2022-10-07T11:38:56.501949087Z",
      "startedProcessingAt": "2022-10-07T11:38:56.504677498Z"
    }
  }
]
